// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:FormItem:validateApi:failed 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-error is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="a-Panel-footerWrap"
    >
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:failed 2`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-error is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              用户名已存在
            </li>
          </ul>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="a-Panel-footerWrap"
    >
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:success 1`] = `
<div>
  <div
    class="a-Panel a-Panel--default a-Panel--form"
    style="position: relative;"
  >
    <div
      class="a-Panel-heading"
    >
      <h3
        class="a-Panel-title"
      >
        <span
          class="a-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="a-Panel-body"
    >
      <form
        class="a-Form a-Form--normal"
        novalidate=""
      >
        <div
          class="a-Form-item a-Form-item--normal is-error is-required"
          data-role="form-item"
        >
          <label
            class="a-Form-label"
          >
            <span>
              <span
                class="a-TplField"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="a-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="a-Form-control is-error a-TextControl"
          >
            <div
              class="a-TextControl-input"
            >
              <input
                autocomplete="off"
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="a-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
        <input
          style="display: none;"
          type="submit"
        />
      </form>
    </div>
    <div
      class="a-Panel-footerWrap"
    >
      <div
        class="a-Panel-btnToolbar a-Panel-footer"
      >
        <button
          class="a-Button a-Button--default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
    <div
      class="resize-sensor"
      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
    >
      
  
      <div
        class="resize-sensor-expand"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-shrink"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
      >
        
    
        <div
          style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
        />
        
  
      </div>
      
  
      <div
        class="resize-sensor-appear"
        style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
      />
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:success 2`] = `
Object {
  "a": "123",
}
`;
